减少gc次数